--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix & Chill</title>
-    <link rel="icon" href="netflix-image.jpg"  type="image/x-icon">
+    <link rel="icon" href="./assets/img/IMG_20200512_041520_990.jpg"  type="image/x-icon">
     <script defer src="action.js"></script>
 </head>
 <body>
